feat-doc: [no-stabled] [work] Emergency commit to save progress in the branch